--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "version": "0.0.0",
-  "scripts": {},
+  "scripts": {
+    "dev": "docker compose up"
+  },
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
